--- a/index.html
+++ b/index.html
@@ -171,21 +171,21 @@
                     <div class="contact-widget">
                         <h3 class="heading-3">Email</h3>
                         <ul>
-                            <li>hello@themebau.com</li>
-                            <li>johndoe@example.com</li>
+                            <li>usamamunir124@.com</li>
+                            <li>usamaokara121@.com</li>
                         </ul>
                     </div>
                     <div class="contact-widget">
                         <h3 class="heading-3">Phone</h3>
                         <ul>
-                            <li>+5 500-358-0309</li>
-                            <li>+12 500-358-0309</li>
+                            <li>+92 313-8641212</li>
+                            <li>+92 342-777-3037</li>
                         </ul>
                     </div>
                     <div class="contact-widget">
                         <h3 class="heading-3">Location</h3>
                         <ul>
-                            <li>C/54 Northwest Freeway, Suite 558, Houston, USA 485</li>
+                            <li>38?2 RA Okara,punjab,pakistan.</li>
                         </ul>
                     </div>
                 </div>
@@ -216,7 +216,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>Template Designed by <a href="https://www.youtube.com/channel/UCYMEEnLzGGGIpQQ3Nu_sBsQ">Salman</a></p>
+            <p>Designed by <a href="https://www.linkedin.com/in/mubashar-hussain-773a24263/">Mubashar Hussain</a></p>
             <div class="social-icons">
                 <a href="#"><i class="lab la-twitter"></i></a>
                 <a href="#"><i class="lab la-facebook"></i></a>
