--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <div class="navbar">
         <div class="container">
-            <a href="#" class="brand">Upwork.</a>
+            <a href="#" class="brand">NANU</a>
             <ul class="nav-links">
                 <li class="active"><a href="#hero">Home</a></li>
                 <li><a href="#services">Services</a></li>
