--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upwork.com</title>
+    <title>nanulogics.com</title>
     <!-- AOS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
@@ -23,8 +23,10 @@
                 <li class="active"><a href="#hero">Home</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#work">Work</a></li>
-                <li><a href="#blog">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
+             <a href="https://wa.link/2912qn"><button class="watsapp-btn">Whatsapp</button></a> 
+
+
             </ul>
             <div class="hamburger">
                 <span></span>
@@ -170,15 +172,17 @@
                     <div class="section-intro">
                         <h1 class="heading-2">Any Query?</h1>
                     </div>
-                    <form action="#">
+                    <form 
+                    action="https://formspree.io/f/mvojvaok"
+                            method="POST">
                         <div class="form-group">
-                            <input type="text" name="name" class="form-input" placeholder="Name" autocomplete="off">
+                            <input type="text" name="name" class="form-input" placeholder="Name" required autocomplete="off">
                         </div>
                         <div class="form-group">
-                            <input type="email" name="email" class="form-input" placeholder="Email" autocomplete="off">
+                            <input type="email" name="email" class="form-input" placeholder="Email" required autocomplete="off">
                         </div>
                         <div class="form-group">
-                            <textarea  name="message" rows="5" class="form-input" placeholder="Message" autocomplete="off"></textarea>
+                            <textarea  name="message" rows="5" class="form-input" placeholder="Message" required autocomplete="off"></textarea>
                         </div>
                         <div class="form-group">
                             <button class="btn" type="submit">Send Message</button>
@@ -200,7 +204,7 @@
                 <a href="#"><i class="lab la-facebook"></i></a>
                 <a href="#"><i class="lab la-youtube"></i></a>
                 <a href="#"><i class="lab la-telegram"></i></a>
-                <a href="https://wa.me/+923138641212"><i class="lab la-whatsapp"></i></a>
+            
             </div>
            
         </div>
